[gd_scene load_steps=29 format=2]

[ext_resource path="res://Entities/Shops/BaseShop/BaseShop.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Shops/UpgradeShop/Upgrades/FuelUpgrade.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Shops/UpgradeShop/UpgradeShop.gd" type="Script" id=3]
[ext_resource path="res://Entities/Shops/UpgradeShop/Upgrades/HullUpgrade.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle8.png" type="Texture" id=5]
[ext_resource path="res://fontDump/textFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://fontDump/headerFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle9.png" type="Texture" id=8]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle11.png" type="Texture" id=9]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle3.png" type="Texture" id=10]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/door/upgrade_shop_door3.png" type="Texture" id=11]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/door/upgrade_shop_door6.png" type="Texture" id=12]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/door/upgrade_shop_door2.png" type="Texture" id=13]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle10.png" type="Texture" id=14]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/door/upgrade_shop_door7.png" type="Texture" id=15]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/door/upgrade_shop_door1.png" type="Texture" id=16]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle13.png" type="Texture" id=17]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/door/upgrade_shop_door5.png" type="Texture" id=18]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle1.png" type="Texture" id=19]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle5.png" type="Texture" id=20]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle2.png" type="Texture" id=21]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle12.png" type="Texture" id=22]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle4.png" type="Texture" id=23]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/door/upgrade_shop_door4.png" type="Texture" id=24]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle6.png" type="Texture" id=25]
[ext_resource path="res://Entities/Shops/UpgradeShop/textures/idle/upgrade_shop_idle7.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 21 ), ExtResource( 10 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 9 ), ExtResource( 22 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 16 ) ],
"loop": false,
"name": "close",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 24 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 15 ) ],
"loop": false,
"name": "open",
"speed": 10.0
} ]

[node name="UpgradeShop" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Building" parent="." index="0"]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="Door" type="AnimatedSprite" parent="Building" index="0"]
position = Vector2( 24, 34 )
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="Background" parent="CanvasLayer/UI" index="0"]
margin_top = -1.25992
margin_bottom = -1.25989
color = Color( 0.188235, 0.227451, 0.313726, 1 )

[node name="NotEnoughMoneyDialog" type="AcceptDialog" parent="CanvasLayer/UI" index="1"]
margin_left = 410.821
margin_top = 281.738
margin_right = 580.821
margin_bottom = 339.738
window_title = "Not enough money"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI" index="2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="CanvasLayer/UI/MarginContainer/VBoxContainer" index="0" groups=[
"translate",
]]
margin_right = 1004.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 7 )
text = "Upgradeshop.title"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CategorySwitches" type="HBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer" index="1"]
margin_top = 83.0
margin_right = 1004.0
margin_bottom = 120.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonFuel" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches" index="0" groups=[
"translate",
]]
margin_left = 82.0
margin_right = 228.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
text = "upgradeshop.Fuel"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonHull" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches" index="1" groups=[
"translate",
]]
margin_left = 248.0
margin_right = 391.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
text = "upgradeshop.Hull"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonEngine" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches" index="2" groups=[
"translate",
]]
margin_left = 411.0
margin_right = 575.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
text = "upgradeshop.Engine"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonCargo" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches" index="3" groups=[
"translate",
]]
margin_left = 595.0
margin_right = 757.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
text = "upgradeshop.Cargo"
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonDrill" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches" index="4" groups=[
"translate",
]]
margin_left = 777.0
margin_right = 922.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )
text = "upgradeshop.Drill"
__meta__ = {
"_edit_lock_": true
}

[node name="CategoryUpgrades" type="MarginContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer" index="2"]
margin_top = 135.0
margin_right = 1004.0
margin_bottom = 490.0
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_left = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelUpgrades" type="ScrollContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades" index="0"]
margin_left = 40.0
margin_right = 964.0
margin_bottom = 355.0

[node name="Upgrades" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/FuelUpgrades" index="0"]
margin_right = 924.0
margin_bottom = 486.0
size_flags_horizontal = 3

[node name="FuelUpgrade" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/FuelUpgrades/Upgrades" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 912.0
margin_bottom = 94.0
theme = null

[node name="FuelUpgrade2" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/FuelUpgrades/Upgrades" index="1" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 98.0
margin_right = 912.0
margin_bottom = 192.0
theme = null
type = 1

[node name="FuelUpgrade3" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/FuelUpgrades/Upgrades" index="2" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 196.0
margin_right = 912.0
margin_bottom = 290.0
theme = null
type = 2

[node name="FuelUpgrade4" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/FuelUpgrades/Upgrades" index="3" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 294.0
margin_right = 912.0
margin_bottom = 388.0
theme = null
type = 3

[node name="FuelUpgrade5" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/FuelUpgrades/Upgrades" index="4" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 392.0
margin_right = 912.0
margin_bottom = 486.0
theme = null
type = 4

[node name="HullUpgrades" type="ScrollContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades" index="1"]
visible = false
margin_left = 40.0
margin_right = 964.0
margin_bottom = 355.0

[node name="Upgrades" type="VBoxContainer" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/HullUpgrades" index="0"]
margin_right = 924.0
margin_bottom = 646.0
size_flags_horizontal = 3

[node name="HullUpgrade" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/HullUpgrades/Upgrades" index="0" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 932.0
margin_bottom = 126.0
theme = null

[node name="HullUpgrade2" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/HullUpgrades/Upgrades" index="1" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 130.0
margin_right = 932.0
margin_bottom = 256.0
theme = null
type = 1

[node name="HullUpgrade3" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/HullUpgrades/Upgrades" index="2" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 260.0
margin_right = 932.0
margin_bottom = 386.0
theme = null
type = 2

[node name="HullUpgrade4" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/HullUpgrades/Upgrades" index="3" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 390.0
margin_right = 932.0
margin_bottom = 516.0
theme = null
type = 3

[node name="HullUpgrade5" parent="CanvasLayer/UI/MarginContainer/VBoxContainer/CategoryUpgrades/HullUpgrades/Upgrades" index="4" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_top = 520.0
margin_right = 932.0
margin_bottom = 646.0
theme = null
type = 4

[node name="Button" type="Button" parent="CanvasLayer/UI/MarginContainer/VBoxContainer" index="3" groups=[
"translate",
]]
margin_top = 505.0
margin_right = 1004.0
margin_bottom = 580.0
rect_min_size = Vector2( 0, 75 )
text = "shop.exit"
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches/ButtonFuel" to="." method="_on_ButtonFuel_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches/ButtonHull" to="." method="_on_ButtonHull_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches/ButtonEngine" to="." method="_on_ButtonEngine_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches/ButtonCargo" to="." method="_on_ButtonCargo_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/VBoxContainer/CategorySwitches/ButtonDrill" to="." method="_on_ButtonDrill_pressed"]
